force-app/main/default/objects/Miembro_de_Concesionario__c/Miembro_de_Concesionario__c.object-meta.xml
<CustomObject>
    <label>Miembro de Concesionario</label>
    <nameField>
        <displayFormat>Reg-{0000}</displayFormat>
        <label>Reg #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miembros de Concesionarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>