force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <formula>Concesionario__r.Agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>