force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Asesor_Activo__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Activo__c</fullName>
    <formula>Nombre_de_asesor__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor Activo</label>
    <type>Checkbox</type>
</CustomField>