force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Asesor_de_renting2__c.field-meta.xml
<CustomField>
    <fullName>Asesor_de_renting2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asesor de renting</label>
    <type>Checkbox</type>
</CustomField>