force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Asesor_de_renting__c.field-meta.xml
<CustomField>
    <fullName>Asesor_de_renting__c</fullName>
    <formula>CONTAINS(Nombre_de_asesor__r.Profile.Name, &quot;renting&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor de renting</label>
    <type>Checkbox</type>
</CustomField>