force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Concesionario__c.field-meta.xml
<CustomField>
    <fullName>Concesionario__c</fullName>
    <label>Concesionario</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Miembros de Concesionarios</relationshipLabel>
    <relationshipName>Miembros_de_Concesionarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>