force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Nombre_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de asesor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Miembros_de_Concesionarios</relationshipName>
    <type>Lookup</type>
</CustomField>