force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Perfil_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Asesor__c</fullName>
    <formula>Nombre_de_asesor__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil Asesor</label>
    <type>Text</type>
</CustomField>