force-app/main/default/objects/Miembro_de_Concesionario__c/fields/Rol_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Rol_de_asesor__c</fullName>
    <formula>Nombre_de_asesor__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol de asesor</label>
    <type>Text</type>
</CustomField>