force-app/main/default/objects/Miembro_de_Concesionario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_de_asesor__c</columns>
    <columns>Concesionario__c</columns>
    <columns>Agencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>